<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashScreen" >

      <ImageView
          android:id="@+id/imgview_temple_splashscreen"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_centerHorizontal="true"
          android:contentDescription="@string/strSplashScreenDesc"
          android:scaleType="centerCrop"
          android:src="@drawable/temple"
          android:text="@string/app_name" >

      </ImageView>

      <TextView
          android:id="@+id/txtAppName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginLeft="50dp"
          android:layout_marginRight="50dp"
          android:layout_marginTop="24dp"
          android:text="@string/title_activity_splash_screen"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:gravity="center"
          android:textColor="#000000" />

      <TextView
          android:id="@+id/txtDevout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/imgview_temple_splashscreen"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="16dp"
          android:text="@string/strDevout"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:gravity="center" />

</RelativeLayout>
