<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayNameActivity" >
    
    <Button
        android:id="@+id/btnEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/btnHome"
        android:drawableTop="@drawable/calendar"
        android:text="@string/descEvents"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btnMemberDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/btnEvents"
        android:text="@string/descMember"
        android:drawableTop="@drawable/user"
       	android:textSize="12sp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:drawableTop="@drawable/register"
         android:layout_toRightOf="@+id/btnMemberDetails"
        android:text="@string/descRegister"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnEvents"
        android:layout_alignParentLeft="true"
        android:drawableTop="@drawable/home"
        android:text="@string/descHome"
        android:textSize="12sp" />

<!--     <TextView -->
<!--         android:id="@+id/tvEvents" -->
<!--         android:layout_width="150dp" -->
<!--         android:layout_height="150dp" -->
<!--         android:layout_above="@+id/btnEvents" -->
<!--         android:layout_alignLeft="@+id/btnHome" -->
<!--         android:layout_alignParentTop="true" -->
<!--         android:layout_alignRight="@+id/btnRegister" -->
<!--         android:layout_marginBottom="5dp" -->
<!--         android:layout_marginTop="8dp" -->
<!--         android:background="@drawable/border" -->
<!--         android:text="@string/strUpcomingEvents" -->
<!--         android:textStyle="bold" -->
<!--         android:gravity="center_horizontal" /> -->

    <ScrollView
        android:id="@+id/svEvents"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/btnEvents"
        android:layout_alignLeft="@+id/btnHome"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnRegister"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:text="@string/strUpcomingEvents"
        android:textStyle="bold"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:id="@+id/llEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>
</RelativeLayout>